# GBRS

./: .Rbuildignore  .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  DESCRIPTION  Dockerfile  Dockerfile.cran  LICENSE  LICENSE.md  MANIFEST.in  NAMESPACE  README.md  cleanup  configure  configure.win  cran-comments.md  predictions_python.json  pyproject.toml  pytest.ini  setup.py  test_model_python.json
.github/workflows/: ci.yml  rhub.yaml
R/: RcppExports.R  model_io.R  package.R  print.R  utils.R
docs/: base_score_computation.md
inst/: CITATION  WORDLIST
inst/include/: GBRS.h  GBRS_RcppExports.h  RiskScore.h  RiskScore_RcppExports.h  gbrs.h  gbrs.hpp  gbrs_RcppExports.h  lib.hpp
man/: gbrs-package.Rd  gbrs.Rd  gbrs_bootstrap.Rd  load_gbrs.Rd  load_predictions.Rd  predict.gbrs.Rd  print.ascii.horizontal.Rd  print.gbrs.Rd  print.gbrs_bootstrap.Rd  print.latex.Rd  print.latex.horizontal.Rd  print.md.Rd  print.md.horizontal.Rd  print.vertical.Rd  save_gbrs.Rd  save_predictions.Rd  summary.gbrs_bootstrap.Rd
python/: bindings.cpp
python/gbrs/: __init__.py  bootstrap.py  model_io.py  utils.py
scripts/: print_latex_table.R  upload-testpypi.ps1  verify-gbrs.py  wine_script.R
src/: .gitignore  Makevars  Makevars.in  Makevars.win.in  R_bindings.cpp  RcppExports.cpp
tests/: conftest.py  run_all_tests.py  test.R  test.py  test_batch_subsampling.py  test_benchmark.py  test_binary.R  test_bootstrap.R  test_bootstrap.py  test_cont.py  test_convergence.py  test_correctness.py  test_cross_language.R  test_cross_language.py  test_integration.R  test_integration.py  test_model_io.R  test_model_io.py  test_performance.py  test_print_formats.py  test_surv.R  test_survival_basescore.py  test_survival_python.py  test_survival_veteran.R  test_user_quantiles.R  test_user_quantiles.py
