[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.6.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "gbrs"
version = "0.1.0"
description = "Gradient Boosted Risk Scores (GBRS) - A library for generating risk scores"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Costa Georgantas", email = "costa.georgantas@chuv.ch"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20",
]

[project.urls]
Homepage = "https://gitlab.com/cgeo/GBRS"
Repository = "https://gitlab.com/cgeo/GBRS"
Issues = "https://gitlab.com/cgeo/GBRS/-/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "scikit-learn>=1.0",
    "lifelines>=0.27"
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "scikit-learn>=1.0",
    "lifelines>=0.27",
    "pandas>=1.3",
    "build",
    "twine"
]