[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.6.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "gbrs"
version = "0.1.0"
description = "Gradient Boosted Risk Scores (GBRS) - A library for generating risk scores"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Costa Georgantas", email = "costa.georgantas@chuv.ch"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20",
]

[project.urls]
Homepage = "https://gitlab.com/cgeo/GBRS"
Repository = "https://gitlab.com/cgeo/GBRS"
Issues = "https://gitlab.com/cgeo/GBRS/-/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "scikit-learn>=1.0",
    "lifelines>=0.27"
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "scikit-learn>=1.0",
    "lifelines>=0.27",
    "pandas>=1.3",
    "build",
    "twine",
    "black",
    "flake8",
    "mypy",
    "isort"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  third_party
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
exclude = "(build|dist|\\.venv|third_party)"

[[tool.mypy.overrides]]
module = ["tests.*", "setup"]
disallow_untyped_defs = false
check_untyped_defs = false
