[build-system]
requires = [
    "setuptools>=77",
    "setuptools-scm>=8",
    "wheel",
    "pybind11>=2.6.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "gbrs-clinical"
dynamic = ["version"]
description = "Gradient Boosted Risk Scores (GBRS) - A library for generating risk scores"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
    {name = "Costa Georgantas", email = "costa.georgantas@chuv.ch"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20",
]

[project.urls]
Homepage = "https://github.com/cogeor/GBRS"
Repository = "https://github.com/cogeor/GBRS"
Issues = "https://github.com/cogeor/GBRS/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "scikit-learn>=1.0",
    "lifelines>=0.27"
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "scikit-learn>=1.0",
    "lifelines>=0.27",
    "pandas>=1.3",
    "build",
    "twine",
    "black",
    "flake8",
    "mypy",
    "isort"
]

[tool.setuptools_scm]
write_to = "python/gbrs/_version.py"
fallback_version = "0.1.0.dev0"
# Tag format: v0.1.0, v0.2.0rc1, etc.
tag_regex = "^v(?P<version>.+)$"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  third_party
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
exclude = "(build|dist|\\.venv|third_party)"

[[tool.mypy.overrides]]
module = ["tests.*", "setup"]
disallow_untyped_defs = false
check_untyped_defs = false
